kubernetes/apps/flux-system/flux-instance/app/github/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-versioned-schemas.pages.dev/gateway-api/1.5.1/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: flux-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  parentRefs:
    - name: external
      kind: Gateway
      namespace: kgateway
      sectionName: https
  hostnames:
    - flux-instance.clerici.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
